Fixed navigation and footer background color and z indexes. This way weather dashboard goes behind nav bar when scrolling.

--- a/src/app/components/app/app.component.scss
+++ b/src/app/components/app/app.component.scss
@@ -1,8 +1,5 @@
-body {
-  background-color: rgb(244, 244, 242);
-}
-
 .navigation {
+  background-color: rgb(244, 244, 242);
   background-attachment: scroll;
   background-clip: border-box;
   background-image: none;
@@ -29,7 +26,7 @@ body {
   position: fixed;
   top: 0px;
   width: 100%;
-  z-index: 30001;
+  z-index: 9001;
   >div {
     box-sizing: border-box;
     color: rgb(51, 51, 51);
@@ -135,6 +132,7 @@ body {
 }
 
 .footer {
+  background-color: rgb(244, 244, 242);
   background-attachment: scroll;
   background-clip: border-box;
   background-image: none;
