--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -58,7 +58,6 @@
       padding-top: 0px;
       position: relative;
       width: 972px;
-      z-index: 101;
 
       >.field {
         box-sizing: border-box;
